--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,20 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "doctrine/annotations": "^1.7",
+        "doctrine/orm": "^2.6",
+        "nelmio/cors-bundle": "^1.5",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
         "preferred-install": {
