--- a/.env
+++ b/.env
@@ -30,3 +30,13 @@ CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_DSN=amqp://localhost:5672
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+#MESSENGER_TRANSPORT_DSN='in-memory:///'
+###< symfony/messenger ###
+
+MEMCACHE_ADDRESS=memcached://localhost
