--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,21 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "ext-sockets": "*",
         "doctrine/annotations": "^1.7",
         "doctrine/orm": "^2.6",
         "nelmio/cors-bundle": "^1.5",
+        "php-amqplib/php-amqplib": "^2.10",
+        "symfony/cache": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/messenger": "4.3.*",
         "symfony/orm-pack": "^1.0",
         "symfony/validator": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "ext-memcached": "*"
     },
     "require-dev": {
         "symfony/web-server-bundle": "4.3.*"
