--- a/.env
+++ b/.env
@@ -21,12 +21,12 @@ APP_SECRET=986d525d3bccd104000189ec70393d1b
 ###< symfony/framework-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+CORS_ALLOW_ORIGIN=^.+$
 ###< nelmio/cors-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/pollResult.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
@@ -39,4 +39,5 @@ MESSENGER_TRANSPORT_DSN=amqp://localhost:5672
 #MESSENGER_TRANSPORT_DSN='in-memory:///'
 ###< symfony/messenger ###
 
-MEMCACHE_ADDRESS=memcached://localhost
+MEMCACHE_ADDRESS=memcached://localhost:11211
+CACHE_LIFE_TIME=5
