--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/orm-pack": "^1.0",
         "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*",
-        "ext-memcached": "*"
+        "ext-memcached": "*",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "symfony/web-server-bundle": "4.3.*"
